<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logoContentDescription"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_below="@+id/imageView1">

        <LinearLayout
            android:id="@+id/fb_login_ll"
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/fb_btn_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_fb_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left">

                <TextView
                    android:id="@+id/fb_signin"
                    style="@style/padding_left_right_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_in_with_fd"
                    android:textSize="@dimen/font_x_normal"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>

        <View style="@style/view_20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/errorMessage"/>

        <View style="@style/view_20" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:contentDescription="@string/email">
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:contentDescription="@string/password">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="5.50"
                android:text="@string/btn_signIn"
                android:contentDescription="@string/btn_signIn"/>

        </LinearLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:contentDescription="@string/forgot_password"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_signup"
                android:contentDescription="@string/btn_signup"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>

